<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_refresh"
           android:icon="@android:drawable/ic_popup_sync"
           android:title="@string/menu_refresh"
           app:showAsAction="always"/>

    <item android:id="@+id/menuNewBuzz"
          android:icon="@android:drawable/ic_input_add"
          android:title="@string/menu_new_buzz"
          app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menuAccounts"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/menu_accounts"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/menuPreferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_preferences"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/menuAbbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        app:showAsAction="withText"/>

</menu>